[package]
name = "custom-plotters"
version = "0.1.0"
authors = ["Diego Correa Tristain <algoritmia@labormedia.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
plotters = "^0.3.5"
wasm-bindgen = "0.2.92"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement"] }
plotters-canvas = "^0.3.0"

[profile.release]
lto = true